# jira2mr

./: .gitignore  README.md  example_config.ini  jira2mr.py  pyproject.toml  requirements.txt
src/jira2mr/: cli.py  core.py
